- Improvement: Code refactor – Some filters, functions, hooks are deprecated and replaced with astra_ prefix NamingConvention. ( Needs Doc )
- Improvement: Gutenberg frontend blocks UI improvement.
- Improvement: Global – Typography – Heading presets value should also retain in H1 to H6.
- Improvement: Moved Astra meta settings into a separate Gutenberg sidebar panel.
- Fix: Gutenberg Editor content area showing white background color when Full screen mode is active.
- Fix: Color picker tooltip appear on hover of selection area & it's palette.
- Fix: W3C HTML validation - Duplicate ID: ast-hf-mobile-menu. This change may break CSS if you have used custom CSS on ast-hf-mobile-menu HTML ID.
- Fix: W3C HTML validation - Duplicate ID: Layer_1. This change may break CSS if you have used custom CSS on Layer_1 HTML ID.
- Fix: The default "Add Widget" text alignment issue in header.
- Fix: W3 validator - Duplicate HTML id 'site-navigation' if there are multiple menus on a single page.
- Fix: W3 validator - CSS parse error for '.menu-link' & '.wp-block-button__link'.
- Fix: Image and Text blocks alignment not working properly with Image size - Medium in the editor.
- Fix: Alignwide blocks getting horizontal scrollbar on tablet breakpoint & 1400px between devices. (Props - https://github.com/ZebulanStanphill)
- Fix: Inner container Gutenberg block's content width not affected by "Container Width" option. (Props - https://github.com/ZebulanStanphill)
- Fix: Gutenberg - Font weight for the heading typography is appearing differently on the editor and frontend.
- Fix: WooCommerce - Broken grid layout on mobile view for products shortcode.
- Fix: Title is misaligned in Gutenberg editor when the Gutenberg plugin v11.4.1 and above is active.
- Fix: The hamburger button is not changing its aria-expanded attribute to true on expanding.

v3.7.3
- Fix: Builder - Offcanvas content directly visible on frontend even 'Toggle Button' component is not added in builder area.